@@ -1,5 +1,9 @@
 2001-05-01  Martin Baulig  <baulig@suse.de>
 
+	* bonobo/Makefile.am: Install all our header files.
+
+2001-05-01  Martin Baulig  <baulig@suse.de>
+
 	* libbonoboui.h: Don't #include bonobo-print.h and
 	bonobo-print-client.h for the moment.
 
